--- a/v2/guide/team.html
+++ b/v2/guide/team.html
@@ -1214,7 +1214,7 @@
     </h2>
 
     <p>
-      Here we honor some no-longer-active core team members who have made valuable contributions in the past.
+      Ici, nous honorons divers membres de l'équipe principale qui ont fait des contributions de grandes valeurs par le passé.
     </p>
 
     <vuer-profile v-for="profile in teamEmeriti" :key="profile.name" :profile="profile" :title-visible="titleVisible"></vuer-profile>
